Monit may alert that the filesystem flags changed if the system has "rootfs"
overlay mount.

Fixed: Issue #603: Support existence/nonexistence test for filesystem check.

Fixed: *BSD: If device parsing for UFS filesystem failed, skip the I/O monitoring
only and continue monitoring the space/inode usage.  Thanks to Daniel Bilik for patch.


Version 5.22.0

New: Linux: Added support for monitoring ZFS disk activity.

New: Issue #500: Added the "method" option for http protocol test, to allow overriding
the HTTP method used for the test (by default HEAD unless content or checksum test is set,
in which case GET is used automatically). Only HEAD and GET methods are supported currently.
Example:
    if failed port 443 protocol https method GET then alert

New: Issue #582: File, Directory, Fifo checks: Added support for explicit access, change
and modification time tests. If the type is not specified, the original timestamp test is
performed, which checks the latest of change and modification timestamps. It is also
possible to use "newer" and "later" operators in the test now. Syntax:
    IF <ACCESS TIME | ATIME | MODIFICATION TIME | MTIME | CHANGE TIME | CTIME | TIME[STAMP]> <operator> <value> [unit] THEN <action>
Example for sending alert if the file was not updated within last hour:
    if modification time is older than 1 hour then alert

New: Renamed the "set logfile <path|syslog>" statement to "set log <path|syslog>".
The "logfile" form is deprecated, but kept for backward compatibility.

Fixed: Linux: If the filesystem is not found in /proc/diskstat, Monit may leak filedescriptors.

Fixed: Issue #487: Solaris on SPARC: Monit doesn't trigger an event if protocol test failed.

Fixed: Issue #566: Systemd template for Monit: Added StandardOutput=null option to prevent
systemd to duplicate Monit log output.

Fixed: Issue #568: fix cross-compilation

Fixed: Issue #569: fix configure --without-zlib
